[gd_scene load_steps=13 format=3 uid="uid://bxloonh4sj3g4"]

[ext_resource type="Script" uid="uid://chofpnjbvyq2e" path="res://scripts/enemy_shooter.gd" id="1_ctjls"]
[ext_resource type="Texture2D" uid="uid://cfm08s30ostbv" path="res://assets/goatcolors.png" id="2_ocdjv"]
[ext_resource type="Texture2D" uid="uid://bu2043v66tsu5" path="res://assets/laserwarning.png" id="3_foyc7"]
[ext_resource type="Texture2D" uid="uid://bnxokqqcw1glo" path="res://assets/cyborg.png" id="3_k0qbs"]
[ext_resource type="Texture2D" uid="uid://b5htssvvtyj0m" path="res://assets/ammo.png" id="4_ctjls"]
[ext_resource type="Texture2D" uid="uid://uixqo3knhfv8" path="res://assets/blackphillip.png" id="4_o863w"]
[ext_resource type="Texture2D" uid="uid://dq3h02fju8jmk" path="res://assets/minigun.png" id="5_o863w"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_o863w"]
friction = 0.1
bounce = 0.75

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_md0e3"]
resource_name = "color_select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:script")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ra3w"]
_data = {
&"color_select": SubResource("Animation_md0e3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(398, 20)

[node name="EnemyShooter" type="RigidBody2D" groups=["Enemies"]]
physics_material_override = SubResource("PhysicsMaterial_o863w")
can_sleep = false
lock_rotation = true
script = ExtResource("1_ctjls")

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteContainer"]
visible = false
texture = ExtResource("2_ocdjv")
hframes = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1bvp3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ra3w")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 5
visibility_layer = 5
shape = SubResource("RectangleShape2D_md0e3")

[node name="RayCasts" type="Node2D" parent="."]

[node name="LeftEdgeDetect" type="RayCast2D" parent="RayCasts"]
visible = false
position = Vector2(-16, 0)
target_position = Vector2(0, 25)

[node name="RightEdgeDetect" type="RayCast2D" parent="RayCasts"]
visible = false
position = Vector2(16, 0)
target_position = Vector2(0, 25)

[node name="SightCast1" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(64, 0)
collision_mask = 4

[node name="SightCast2" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(152, 0)
collision_mask = 4

[node name="WeakCast1" type="RayCast2D" parent="RayCasts"]
visible = false
position = Vector2(0, 1)
target_position = Vector2(0, -22)
collision_mask = 4

[node name="WeakCast2" type="RayCast2D" parent="RayCasts"]
visible = false
target_position = Vector2(-22, 0)
collision_mask = 4

[node name="GroundDetect" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 22)
collision_mask = 4

[node name="StunTimer" type="Timer" parent="."]

[node name="StartEngageTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -42.0
offset_right = 20.0
offset_bottom = -19.0
text = "!"
horizontal_alignment = 1

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.05

[node name="Cyborg" type="Node2D" parent="."]

[node name="CyborgFireRate" type="Timer" parent="Cyborg"]

[node name="LaserWarningTimer" type="Timer" parent="Cyborg"]

[node name="LaserWarning" type="Sprite2D" parent="Cyborg"]
visible = false
position = Vector2(176, -10)
texture = ExtResource("3_foyc7")

[node name="Sprite2D" type="Sprite2D" parent="Cyborg"]
texture = ExtResource("2_ocdjv")
hframes = 27

[node name="Cyborg" type="Sprite2D" parent="Cyborg"]
texture = ExtResource("3_k0qbs")

[node name="Marker2D" type="Marker2D" parent="Cyborg"]
position = Vector2(14, -10)

[node name="RayCasts" type="Node2D" parent="Cyborg"]

[node name="RayCast2D" type="RayCast2D" parent="Cyborg/RayCasts"]
target_position = Vector2(89, 0)

[node name="BlackPhillip" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="BlackPhillip"]
texture = ExtResource("4_o863w")

[node name="Marker2D" type="Marker2D" parent="BlackPhillip"]
position = Vector2(-17, 0)

[node name="RayCasts" type="Node2D" parent="BlackPhillip"]

[node name="RayCast2D" type="RayCast2D" parent="BlackPhillip/RayCasts"]
target_position = Vector2(115, 0)

[node name="VulcanRaven" type="Node2D" parent="."]
visible = false

[node name="Ammo" type="Sprite2D" parent="VulcanRaven"]
texture = ExtResource("4_ctjls")

[node name="VulcanSprite" type="Sprite2D" parent="VulcanRaven"]
texture = ExtResource("2_ocdjv")
hframes = 27

[node name="Gun" type="Sprite2D" parent="VulcanRaven"]
texture = ExtResource("5_o863w")

[node name="Marker2D" type="Marker2D" parent="VulcanRaven"]
position = Vector2(16, -1)

[node name="RayCasts" type="Node2D" parent="VulcanRaven"]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StartEngageTimer" to="." method="_on_start_engage_timer_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="Cyborg/LaserWarningTimer" to="." method="_on_laser_warning_timer_timeout"]
